# trigger

./: Dockerfile  LICENSE  README.md  justfile
.github/workflows/: ci.yml
DEBIAN/: changelog  control  copyright  postinst  postrm
src/: CMakeLists.txt  example.c  trigger.c  trigger.h
